fix FF issue where map is too small to show all layers in layerswitcher

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -274,10 +274,15 @@ legend {
    height:35px;
 }
 
-#layerswitcher.olControlLayerSwitcher {
-    /*font-size:14px !important;*/
-    width: 25em;
+.olControlLayerSwitcher {
+    width: 25em !important;
 }
+
+/*
+#layerswitcher.olControlLayerSwitcher {
+    font-size:14px !important;
+}
+*/
 
 .olControlLayerSwitcher .layersDiv {
     /*background-color:red !important;*/
